buttons center align on edit page fixed

--- a/src/main/webapp/css/editNews.css
+++ b/src/main/webapp/css/editNews.css
@@ -42,7 +42,7 @@ label.error{
     vertical-align: top;
 }
 #buttons{
-    margin-left: 200px;
+    margin-left: 150px;
 }
 textarea{
     width: 380px;
